Add contact page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Test website</h1>
 <a [routerLink]="['about']">Go to about page</a>
+<a [routerLink]="['contact']">Go to contact page</a>
 <router-outlet></router-outlet>
